add title in all pages

--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %} {% load bootstrap %} {% load i18n %} {% load account socialaccount %} {% block head_title %}{% trans "Sign In" %}{% endblock %} {% block css %}
+{% extends "base.html" %} {% load bootstrap %}{% block title %} Login | Cepstrum {% endblock title %} {% load i18n %} {% load account socialaccount %} {% block head_title %}{% trans "Sign In" %}{% endblock %} {% block css %}
 <style>
     .carousel-item {
         height: 100vh;
