--- a/bios/templates/bios/project_create.html
+++ b/bios/templates/bios/project_create.html
@@ -1,19 +1,18 @@
-{% extends "bios/bio_base.html" %}
-{% load bootstrap %}
-{% block prepost %}
+{% extends "bios/bio_base.html" %} {% load bootstrap %} {% block title %} Know Your Seniors | Cepstrum {% endblock title %} {% block prepost %}
 <div class="">
-  <br><br><br><br><br>
+    <br><br><br><br><br>
 </div>
 
-<div class="container"><h1>Create Project:- </h1></div>
+<div class="container">
+    <h1>Create Project:- </h1>
+</div>
 <br>
 <form class="container" method="POST">
-  <h5>if you didn't found your relevent technical skill then <a href="{% url 'bios:techskill_create' %}">Create a new one.</a></h5>
-{% csrf_token %}
-{{ form|bootstrap }}
-<input type="submit" name="" class="btn btn-outline-success" value="Submit">
+    <h5>if you didn't found your relevent technical skill then <a href="{% url 'bios:techskill_create' %}">Create a new one.</a></h5>
+    {% csrf_token %} {{ form|bootstrap }}
+    <input type="submit" name="" class="btn btn-outline-success" value="Submit">
 </form>
 <div class="">
-  <br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br>
 </div>
 {% endblock %}
