--- a/bios/templates/bios/project_detail.html
+++ b/bios/templates/bios/project_detail.html
@@ -1,4 +1,4 @@
-{% extends "bios/bio_base.html" %} {% block navimg %}https://www.iitg.ac.in/storage/gallery/1/1205088503.jpg{% endblock navimg %} {% load bootstrap %} {% block navcontent %}
+{% extends "bios/bio_base.html" %} {% block title %} Know Your Seniors | Cepstrum {% endblock title %} {% block navimg %}https://www.iitg.ac.in/storage/gallery/1/1205088503.jpg{% endblock navimg %} {% load bootstrap %} {% block navcontent %}
 
 <h1>{{object}}</h1>
 <details>
