--- a/bios/templates/bios/techskill_create.html
+++ b/bios/templates/bios/techskill_create.html
@@ -1,15 +1,12 @@
-{% extends "bios/bio_base.html" %}
-{% load bootstrap %}
-{% block prepost %}
+{% extends "bios/bio_base.html" %} {% load bootstrap %} {% block title %} Know Your Seniors | Cepstrum {% endblock title %} {% block prepost %}
 <div class="">
-  <br><br><br><br><br>
+    <br><br><br><br><br>
 </div>
 <form class="container" method="POST">
-{% csrf_token %}
-{{ form|bootstrap }}
-<input type="submit" name="" class="btn btn-outline-success" value="Create Technical Skill">
+    {% csrf_token %} {{ form|bootstrap }}
+    <input type="submit" name="" class="btn btn-outline-success" value="Create Technical Skill">
 </form>
 <div class="">
-  <br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br>
 </div>
 {% endblock %}
