--- a/celebration/templates/celebration/celebration_detail.html
+++ b/celebration/templates/celebration/celebration_detail.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} {% block css %}
+{% extends 'base.html' %} {% block title %} {{object}} | Cepstrum {% endblock title %} {% block css %}
 <style>
     div#carousel {
         perspective: 100%;
