--- a/donation/templates/donation/confirmation.html
+++ b/donation/templates/donation/confirmation.html
@@ -1,4 +1,4 @@
-{% extends 'shop/base.html' %} {% load crispy_forms_tags %} {% block padding %}
+{% extends 'shop/base.html' %} {% load crispy_forms_tags %} {% block title %} Donation | Cepstrum {% endblock title %} {% block padding %}
 <style>
     .carousel-item-screen {
         color: rgb(255, 255, 255);
