--- a/donation/templates/donation/list.html
+++ b/donation/templates/donation/list.html
@@ -1,4 +1,4 @@
-{% extends 'shop/base.html' %} {% block navcontent %}
+{% extends 'shop/base.html' %} {% block title %} Your Donations | Cepstrum {% endblock title %}{% block navcontent %}
 <main style="color: wheat;">
     <div class="container">
         <div class="table-responsive text-nowrap">
