--- a/inked_intellects/templates/inked_intellects/inked_intellects_detail.html
+++ b/inked_intellects/templates/inked_intellects/inked_intellects_detail.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} {% load static %} {% block css %}
+{% extends 'base.html' %} {% load static %} {% block title %} Inked Intellects | Cepstrum {% endblock title %} {% block css %}
 <style>
     .carousel-item {
         height: 100vh;
