--- a/inphase/templates/inphase/inphase_list.html
+++ b/inphase/templates/inphase/inphase_list.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} {% block css %}
+{% extends 'base.html' %} {% block title %} Inphase | Cepstrum {% endblock title %} {% block css %}
 <style>
     .carousel-item {
         height: 100vh;
