--- a/inplex/templates/inplex/create_profile.html
+++ b/inplex/templates/inplex/create_profile.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}{% load bootstrap %}{% load crispy_forms_tags %} {% block css %}
+{% extends "base.html" %}{% load bootstrap %}{% load crispy_forms_tags %} {% block title %} Inplex | Cepstrum {% endblock title %} {% block css %}
 <style>
     @import url('https://fonts.googleapis.com/css2?family=Acme&family=Lobster&family=Montserrat:wght@400;600;700;900&family=Nunito:wght@500&family=Pacifico&family=Poppins&display=swap');
     .carousel-item {
