--- a/paperman/templates/paperman/paperman_list.html
+++ b/paperman/templates/paperman/paperman_list.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %} {% load humanize %} {% load bootstrap %} {% load static %} {% block css %}
+{% extends "base.html" %} {% load humanize %} {% load bootstrap %} {% load static %}{% block title %} Paperman | Cepstrum {% endblock title %} {% block css %}
 <style>
     .carousel-item {
         height: 100vh;
