--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="css/stylewise.css">
     <meta name="viewport" content="width=device-width, initial-scale=1,
       shrink-to-fit=no">
-    <title>Home | Cepstrum</title>
+
+    <title>{% block title %} {% endblock title %}</title>
 
     {% block head %} {% endblock head %}
 
