--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %} {% load static %} {% block css %}
+{% extends "base.html" %} {% load static %} {% block title %} Home | Cepstrum {% endblock title %} {% block css %}
 <style>
     .carousel-item {
         height: 100vh;
@@ -91,6 +91,8 @@
                         Electronics and Electrical Engineering (EEE) deals with the learning of everything ranging from differebt electrical machines to how our elevtrical system work and sustain. It includes the engineering problems, opportunities and needs of electrical, electronics,
                         computer, telecommunication systems and related industries.
                     </p>
+                    <br><br>
+                    <a href="https://iitg.ac.in/eee/" class="link-button">Know More</a>
                 </div>
 
 
