--- a/bios/templates/bios/project_list.html
+++ b/bios/templates/bios/project_list.html
@@ -1,4 +1,4 @@
-{% extends "bios/bio_base.html" %} {% load bootstrap %} {% block navcontent %}
+{% extends "bios/bio_base.html" %} {% load bootstrap %}{% block title %} Know Your Seniors | Cepstrum {% endblock title %} {% block navcontent %}
 <h1><b>Projects</b> </h1>
 <br>
 <p>
