--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %} {% load static %} {% block css %}
+{% extends "base.html" %} {% load static %} {% block title %} Merchandise | Cepstrum {% endblock title %} {% block css %}
 <style>
     .carousel-item {
         height: 100vh;
