--- a/templates/thanks.html
+++ b/templates/thanks.html
@@ -1,11 +1,10 @@
-{% extends "base.html" %}
-{% block body_block %}
+{% extends "base.html" %} {% block title %} Thank You | Cepstrum {% endblock title %} {% block body_block %}
 <br><br><br><br>
 <h1>THANKS FOR VISTING! Come Back Soon!</h1>
 <div class="">
-  <br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br>
 </div>
 <div class="">
-  <br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br>
 </div>
 {% endblock %}
