--- a/inplex/templates/inplex/create_profile.html
+++ b/inplex/templates/inplex/create_profile.html
@@ -86,7 +86,7 @@ my-carousel" data-ride="carousel">
         </div>
         <div class="row">
             <div class="form-group col-md-6 mb-0">
-                {{ form.linked_profile|as_crispy_field }}
+                {{ form.linked_in_profile|as_crispy_field }}
             </div>
             <div class="form-group col-md-6 mb-0">
                 {{ form.number|as_crispy_field }}
