--- a/inplex/templates/inplex/create_experience.html
+++ b/inplex/templates/inplex/create_experience.html
@@ -204,7 +204,7 @@ my-carousel" data-ride="carousel">
                                 {{ form.difficulty1|as_crispy_field }}
                             </div>
                             <div class="form-group col-md-6 mb-0">
-                                {{ form.experince1|as_crispy_field }}
+                                {{ form.experience1|as_crispy_field }}
                             </div>
                         </div>
                         <br>
@@ -224,7 +224,7 @@ my-carousel" data-ride="carousel">
                                             {{ form.difficulty2|as_crispy_field }}
                                         </div>
                                         <div class="form-group col-md-6 mb-0">
-                                            {{ form.experince2|as_crispy_field }}
+                                            {{ form.experience2|as_crispy_field }}
                                         </div>
                                     </div>
                                 </div>
@@ -245,7 +245,7 @@ my-carousel" data-ride="carousel">
                                                     {{ form.difficulty3|as_crispy_field }}
                                                 </div>
                                                 <div class="form-group col-md-6 mb-0">
-                                                    {{ form.experince3|as_crispy_field }}
+                                                    {{ form.experience3|as_crispy_field }}
                                                 </div>
                                             </div>
                                         </div>
@@ -266,7 +266,7 @@ my-carousel" data-ride="carousel">
                                                             {{ form.difficulty4|as_crispy_field }}
                                                         </div>
                                                         <div class="form-group col-md-6 mb-0">
-                                                            {{ form.experince4|as_crispy_field }}
+                                                            {{ form.experience4|as_crispy_field }}
                                                         </div>
                                                     </div>
                                                 </div>
@@ -287,7 +287,7 @@ my-carousel" data-ride="carousel">
                                                                     {{ form.difficulty5|as_crispy_field }}
                                                                 </div>
                                                                 <div class="form-group col-md-6 mb-0">
-                                                                    {{ form.experince5|as_crispy_field }}
+                                                                    {{ form.experience5|as_crispy_field }}
                                                                 </div>
                                                             </div>
                                                             <br>
@@ -307,7 +307,7 @@ my-carousel" data-ride="carousel">
                                                                                 {{ form.difficulty6|as_crispy_field }}
                                                                             </div>
                                                                             <div class="form-group col-md-6 mb-0">
-                                                                                {{ form.experince6|as_crispy_field }}
+                                                                                {{ form.experience6|as_crispy_field }}
                                                                             </div>
                                                                         </div>
                                                                         <br>
@@ -327,7 +327,7 @@ my-carousel" data-ride="carousel">
                                                                                             {{ form.difficulty7|as_crispy_field }}
                                                                                         </div>
                                                                                         <div class="form-group col-md-6 mb-0">
-                                                                                            {{ form.experince7|as_crispy_field }}
+                                                                                            {{ form.experience7|as_crispy_field }}
                                                                                         </div>
                                                                                     </div>
                                                                                 </div>
