--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -1,8 +1,12 @@
-<<<<<<< HEAD
-{% extends "base.html" %} {% load bootstrap %} {% load i18n %} {% load account socialaccount %} {% block head_title %}{% trans "Sign In" %}{% endblock %} {% block css %}
-=======
-{% extends "base.html" %} {% load bootstrap %}{% block title %} Login | Cepstrum {% endblock title %} {% load i18n %} {% load account socialaccount %} {% block head_title %}{% trans "Sign In" %}{% endblock %} {% block css %}
->>>>>>> cdac4d1211d56984220f02bda8b3cb8fc64ca711
+ {% extends "base.html" %} {% load bootstrap %} {% load i18n %} {% load account socialaccount %}{% load bootstrap %}
+ {% block title %} Login | Cepstrum {% endblock title %} 
+ {% load i18n %} 
+{% load account socialaccount %} 
+
+
+{% block head_title %}{% trans "Sign In" %}{% endblock %} 
+{% block css %}
+
 <style>
     .carousel-item {
         height: 100vh;
