--- a/inplex/templates/inplex/create_experience.html
+++ b/inplex/templates/inplex/create_experience.html
@@ -1,5 +1,9 @@
+ {% extends 'base.html' %} {% load bootstrap %} {% load crispy_forms_tags %} {% load static %} {% block title %} Inplex | Cepstrum {% endblock title %} {% block head %}
+<link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.min.js" integrity="sha512-2ImtlRlf2VVmiGZsjm9bEyhjGW4dU7B6TNwh/hx/iSByxNENtj3WVE6o/9Lj4TJeVXPi4bnOIMXFIJJAeufa0A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
-{% extends 'base.html' %} {% load bootstrap %} {% load crispy_forms_tags %} {% load static %} {% block title %} Inplex | Cepstrum {% endblock title %} {% block css %}
+{% endblock head %} {% block css %}
 <style>
     @import url('https://fonts.googleapis.com/css?family=Hind:300,400&family=Nunito:wght@500&display=swap');
     @import url('https://fonts.googleapis.com/css2?family=Acme&family=Lobster&family=Montserrat:wght@400;600;700;900&family=Nunito:wght@500&family=Pacifico&family=Poppins&display=swap');
@@ -179,11 +183,11 @@ my-carousel" data-ride="carousel">
                 {{ form.company|as_crispy_field }}
             </div>
             <div class="form-group col-md-6 mb-0">
-                {{ form.profile|as_crispy_field }} 
+                {{ form.profile|as_crispy_field }}
             </div>
 
             <div class="form-group col-md-6 mb-0">
-                <br><span style="display: flex">Selected :  &nbsp; {{ form.selected|as_crispy_field }}</span>  
+                <br><span style="display: flex">Selected :  &nbsp; {{ form.selected|as_crispy_field }}</span>
             </div>
         </div>
         <br>
@@ -362,6 +366,10 @@ my-carousel" data-ride="carousel">
     </form>
 </section>
 
-
+<script>
+    $(document).ready(function() {
+        $(".select").select2();
+    });
+</script>
 
 {% endblock content %}
