--- a/inplex/templates/inplex/create_profile.html
+++ b/inplex/templates/inplex/create_profile.html
@@ -1,4 +1,9 @@
-{% extends "base.html" %}{% load bootstrap %}{% load crispy_forms_tags %} {% block title %} Inplex | Cepstrum {% endblock title %} {% block css %}
+{% extends "base.html" %}{% load bootstrap %}{% load crispy_forms_tags %} {% block title %} Inplex | Cepstrum {% endblock title %} {% block head %}
+<link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.min.js" integrity="sha512-2ImtlRlf2VVmiGZsjm9bEyhjGW4dU7B6TNwh/hx/iSByxNENtj3WVE6o/9Lj4TJeVXPi4bnOIMXFIJJAeufa0A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+{% endblock head %} {% block css %}
 <style>
     @import url('https://fonts.googleapis.com/css2?family=Acme&family=Lobster&family=Montserrat:wght@400;600;700;900&family=Nunito:wght@500&family=Pacifico&family=Poppins&display=swap');
     .carousel-item {
@@ -105,4 +110,9 @@ my-carousel" data-ride="carousel">
         <input type="submit" value="Submit" class="btn btn-large btn-primary">
     </form>
 </div>
+<script>
+    $(document).ready(function() {
+        $(".select").select2();
+    });
+</script>
 <br><br><br><br><br> {% endblock %}
