--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,6 @@
 
     <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"> -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 
 
 </head>
@@ -74,6 +73,24 @@
                     <li class="nav-item active NavItem mx-3">
                         <a class="nav-link" aria-current="page" href="{% url 'home' %}">Home</a>
                     </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Initiatives
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="{% url 'inphase:all' %}">Inphase</a></li>
+                            <li><a class="dropdown-item" href="https://medium.com/inplace/">Inplace</a></li>
+                            <!--<li><a class="dropdown-item" href="{% url 'inplace:all' %}">Inplace</a></li>-->
+                            <li><a class="dropdown-item" href="https://iitg.ac.in/cepstrum/paperman.html">PaperMan</a></li>
+                            <!-- <li><a class="dropdown-item" href="{% url 'paperman:all' %}">PaperMan</a></li>
+                            <li><a class="dropdown-item" href="{% url 'inked_intellects:all' %}">Inked Intelect</a></li> -->
+                            <li><a class="dropdown-item" href="https://medium.com/inked-intellects">Inked Intelect</a></li>
+                            <!-- <li> <a class="dropdown-item" href="{% url 'timetable:index' %}">Timetable</a></li> -->
+                            <!-- <li><a class="dropdown-item" href="{% url 'core:home' %}">Mechendise</a> </li> -->
+                            <!-- <li><a class="dropdown-item" href="{% url 'dp:all' %}">Donation</a></li> -->
+                            <li><a class="dropdown-item" href="{% url 'inplex:all' %}">Inplex | Intern</a></li>
+                        </ul>
+                    </li>
                     <!-- {% if user.is_authenticated %}
                     <li class="nav-item dropdown active" class="">
                         <a class="nav-link dropdown-toggle" href="" id="dropdownMenuButton" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -105,32 +122,6 @@
                     </li>
                     {% else %} 
                     {% endif %} -->
-                    <li class="nav-item dropdown active" class="">
-                        <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Initiatives
-          </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="{% url 'inphase:all' %}">Inphase</a>
-                            <a class="dropdown-item" href="https://medium.com/inplace/">Inplace</a>
-                            <!-- <a class="dropdown-item" href="{% url 'inplace:all' %}">Inplace</a> -->
-                            <a class="dropdown-item" href="https://iitg.ac.in/cepstrum/paperman.html">PaperMan</a>
-                            <!-- <a class="dropdown-item" href="{% url 'paperman:all' %}">PaperMan</a> -->
-                            <!-- <a class="dropdown-item" href="{% url 'inked_intellects:all' %}">Inked Intelect</a> -->
-                            <a class="dropdown-item" href="https://medium.com/inked-intellects">Inked Intelect</a>
-                            <!-- <a class="dropdown-item" href="{% url 'timetable:index' %}">Timetable</a> -->
-                            <!-- <a class="dropdown-item" href="{% url 'core:home' %}">Mechendise</a> -->
-                            <!-- <a class="dropdown-item" href="{% url 'dp:all' %}">Donation</a> -->
-                            <a class="dropdown-item" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Inplex
-                              </a>
-
-                            <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                                <a class="dropdown-item" href="{% url 'inplex:all' %}">Intern</a>
-                                <a class="dropdown-item" href="#">Placement</a>
-                            </div>
-
-                        </div>
-                    </li>
                     <li class="nav-item active NavItem mx-3">
                         <a class="nav-link" aria-current="page" href="{% url 'celebration:all' %}">Events</a>
                     </li>
@@ -159,9 +150,7 @@
 
     {% block carousel %} {% endblock carousel %} {% block content %} {% endblock content %} {% block js %} {% endblock js %}
 
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 
 </html>
