added filter  and views

--- a/templates/base.html
+++ b/templates/base.html
@@ -79,12 +79,12 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="{% url 'inphase:all' %}">Inphase</a></li>
-                            <li><a class="dropdown-item" href="https://medium.com/inplace/">Inplace</a></li>
-                            <!--<li><a class="dropdown-item" href="{% url 'inplace:all' %}">Inplace</a></li>-->
+                            <!-- <li><a class="dropdown-item" href="https://medium.com/inplace/">Inplace</a></li> -->
+                            <li><a class="dropdown-item" href="{% url 'inplace:all' %}">Inplace</a></li>
                             <li><a class="dropdown-item" href="https://iitg.ac.in/cepstrum/paperman.html">PaperMan</a></li>
-                            <!-- <li><a class="dropdown-item" href="{% url 'paperman:all' %}">PaperMan</a></li>
-                            <li><a class="dropdown-item" href="{% url 'inked_intellects:all' %}">Inked Intelect</a></li> -->
-                            <li><a class="dropdown-item" href="https://medium.com/inked-intellects">Inked Intelect</a></li>
+                            <!-- <li><a class="dropdown-item" href="{% url 'paperman:all' %}">PaperMan</a></li> -->
+                            <li><a class="dropdown-item" href="{% url 'inked_intellects:all' %}">Inked Intelect</a></li>
+                            <!-- <li><a class="dropdown-item" href="https://medium.com/inked-intellects">Inked Intelect</a></li> -->
                             <!-- <li> <a class="dropdown-item" href="{% url 'timetable:index' %}">Timetable</a></li> -->
                             <!-- <li><a class="dropdown-item" href="{% url 'core:home' %}">Mechendise</a> </li> -->
                             <!-- <li><a class="dropdown-item" href="{% url 'dp:all' %}">Donation</a></li> -->
