--- a/inplex/templates/inplex/home.html
+++ b/inplex/templates/inplex/home.html
@@ -1,4 +1,9 @@
-{% extends "base.html" %} {% block title %} Inplex | Cepstrum {% endblock title %} {% block css %}
+{% extends "base.html" %}{% load bootstrap %} {% block title %} Inplex | Cepstrum {% endblock title %} {% block head %}
+<link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.min.js" integrity="sha512-2ImtlRlf2VVmiGZsjm9bEyhjGW4dU7B6TNwh/hx/iSByxNENtj3WVE6o/9Lj4TJeVXPi4bnOIMXFIJJAeufa0A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+{% endblock head %} {% block css %}
 <style>
     @import url('https://fonts.googleapis.com/css2?family=Acme&family=Lobster&family=Montserrat:wght@400;600;700;900&family=Nunito:wght@500&family=Pacifico&family=Poppins&display=swap');
     .carousel-item {
@@ -46,6 +51,23 @@ my-carousel" data-ride="carousel">
                         Internships and placements are some of the most important milestones of one's college life. Hence, we at Cepstrum, IIT Guwahati have come up with yet another initiative, Inplex. It aims to provide a platform for seniors to share their valuable placement
                         and intern season experiences for the upcoming batches to learn from.
                     </p>
+{% comment %}                     
+                    <div class="d-flex align-items-start">
+                        <div class="nav flex-column nav-pills me-3" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+                            <button class="nav-link active" id="v-pills-home-tab" data-bs-toggle="pill" data-bs-target="#v-pills-home" type="button" role="tab" aria-controls="v-pills-home" aria-selected="true">Company</button>
+                            <button class="nav-link" id="v-pills-profile-tab" data-bs-toggle="pill" data-bs-target="#v-pills-profile" type="button" role="tab" aria-controls="v-pills-profile" aria-selected="false">Student Name</button>
+                        </div>
+                        <form method="GET" class="">
+                            <div class="tab-content" id="v-pills-tabContent">
+                                <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel" aria-labelledby="v-pills-home-tab" tabindex="0">{{filter.form.company|bootstrap}}<br/><button type="submit" class="btn btn-primary">Search</button></div>
+                                <div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab" tabindex="0">{{filter.form.owner|bootstrap}}<br/><button type="submit" class="btn btn-primary">Search</button></div>
+                            </div>
+
+
+                        </form>
+                    </div> {% endcomment %}
+
+
                     <br> {% if created %}
                     <a class='btn btn-primary' href="{% url 'inplex:experience_create' %}">Add your experience</a> {% else %}
                     <a class='btn btn-primary' href="{% url 'inplex:student_create' %}">Create profile</a> {% endif %}
@@ -59,7 +81,37 @@ my-carousel" data-ride="carousel">
     </div>
 
 </div>
-{% endblock carousel %} {% comment %} {% block content %} {% for i in student_list %}
-<h1>{{i}}</h1>
-<h1>{{user}}</h1>
-{% endfor %} {% endblock content %} {% endcomment %}
+<script>
+    $(document).ready(function() {
+        $("#id_owner").select2();
+    });
+</script>
+<script>
+    $(document).ready(function() {
+        $("#id_company").select2();
+    });
+</script>
+{% endblock carousel %} {% block content1 %}
+<br>
+<div class="row container row-cols-1 row-cols-md-6 g-4">
+    {% for i in filter.qs %}
+    <div class="col">
+        <div class="card h-10">
+            <div class="card-body">
+                <h5 class="card-title">{{i}}</h5>
+            </div>
+            <div class="card-footer" style="text-align: center;">
+
+                {% for j in student_list %}
+                {% if i.owner == j.owner  %}
+                <a class="btn btn-info" href="{% url 'inplex:detail' j.id %}">View</a> 
+                {% endif %}
+                {% endfor %}
+
+            </div>
+        </div>
+    </div>
+    {% endfor %}
+
+</div>
+<br> {% endblock %}
