--- a/inphase/templates/inphase/inphase_list.html
+++ b/inphase/templates/inphase/inphase_list.html
@@ -61,7 +61,8 @@ my-carousel" data-ride="carousel">
 <center>
 
     <div class="row container row-cols-1 row-cols-md-6 g-4">
-        {% for i in inphase_list %}
+        {% for i in inphase_list %} {% if not i.id == 17 %}
+
         <div class="col">
             <div class="card h-10">
                 <img src="{{i.pic.url}}" class="card-img-top" alt="...">
@@ -76,7 +77,7 @@ my-carousel" data-ride="carousel">
                 </div>
             </div>
         </div>
-        {% endfor %}
+        {% endif %} {% endfor %}
 
     </div>
 </center>
