--- a/team/templates/team_list.html
+++ b/team/templates/team_list.html
@@ -74,13 +74,30 @@ my-carousel" data-ride="carousel">
                     </p>
                     <br>
                     <br>
+                    <div class="d-flex align-items-start">
+                        <div class="nav flex-column nav-pills me-3" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+                            <button class="nav-link active" id="v-pills-home-tab" data-bs-toggle="pill" data-bs-target="#v-pills-home" type="button" role="tab" aria-controls="v-pills-home" aria-selected="true">Curent Team</button>
+                            <button class="nav-link" id="v-pills-profile-tab" data-bs-toggle="pill" data-bs-target="#v-pills-profile" type="button" role="tab" aria-controls="v-pills-profile" aria-selected="false">Previous Team</button>
 
-                    <button type="button" class="btn btn-outline-primary btn-lg" onclick="window.location.href = '#Executives';">Team EXECUTIVES</button>
-                    <button type="button" class="btn btn-outline-primary btn-lg" onclick="window.location.href = '#4yr';">4th Year</button>
-                    <button type="button" class="btn btn-outline-primary btn-lg" onclick="window.location.href = '#3yr';">3rd Year</button>
-                    <button type="button" class="btn btn-outline-primary btn-lg" onclick="window.location.href = '';">2nd Year</button>
-                    <button type="button" class="btn btn-outline-primary btn-lg" onclick="window.location.href = '#Inphase';">Inphase Team</button>
-                    <button type="button" class="btn btn-outline-primary btn-lg" onclick="window.location.href = '#WebOps';">Web Ops Team</button>
+                        </div>
+                        <div class="tab-content" id="v-pills-tabContent">
+                            <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel" aria-labelledby="v-pills-home-tab" tabindex="0">
+                                <button type="button" class="btn btn-primary" onclick="window.location.href = '#Executives';">Team EXECUTIVES</button>
+                                <button type="button" class="btn btn-primary" onclick="window.location.href = '#4yr';">4th Year</button>
+                                <button type="button" class="btn btn-primary " onclick="window.location.href = '#3yr';">3rd Year</button>
+                                <button type="button" class="btn btn-primary" onclick="window.location.href = '#2yr';">2nd Year</button>
+                                <button type="button" class="btn btn-primary" onclick="window.location.href = '#Inphase';">Inphase Team</button>
+                                <button type="button" class="btn btn-primary" onclick="window.location.href = '#WebOps';">Web Ops Team</button>
+                            </div>
+                            <div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab" tabindex="0">
+                                {% for i in year %}
+                                <a href="{% url 'team:prev' i.id %}" class="btn btn-primary">Cepstrum {{i}}</a> {% endfor %}
+
+                            </div>
+                        </div>
+                    </div>
+
+
                 </div>
 
 
@@ -104,7 +121,7 @@ my-carousel" data-ride="carousel">
     <div class="container-fluid sections" id="Executives">
 
         <h1 class="sections-header">EXECUTIVES</h1>
-        <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="row row-cols-1 row-cols-md-4 g-4">
 
 
             {% for i in team_list %} {% if i.category.name == 'Executive' %}
@@ -149,7 +166,7 @@ my-carousel" data-ride="carousel">
     <div class="container-fluid sections" id="4yr">
 
         <h1 class="sections-header">4th Year Reprentative</h1>
-        <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="row row-cols-1 row-cols-md-4 g-4">
 
             {% for i in team_list %} {% if i.category.name == '4th year' %}
             <div class="col">
@@ -191,7 +208,7 @@ my-carousel" data-ride="carousel">
     <div class="container-fluid sections" id="3yr">
 
         <h1 class="sections-header">3rd Year Reprentative</h1>
-        <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="row row-cols-1 row-cols-md-4 g-4">
 
             {% for i in team_list %} {% if i.category.name == '3rd year' %}
             <div class="col">
@@ -233,7 +250,7 @@ my-carousel" data-ride="carousel">
     <div class="container-fluid sections" id="Inphase">
 
         <h1 class="sections-header">Inphase Team</h1>
-        <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="row row-cols-1 row-cols-md-4 g-4">
 
             {% for i in team_list %} {% if i.category.name == 'Inphase' %}
             <div class="col">
@@ -275,7 +292,7 @@ my-carousel" data-ride="carousel">
     <div class="container-fluid sections" id="WebOps">
 
         <h1 class="sections-header">Webops Team</h1>
-        <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="row row-cols-1 row-cols-md-4 g-4">
 
             {% for i in team_list %} {% if i.category.name == 'Webops' %}
             <div class="col">
