--- a/templates/base.html
+++ b/templates/base.html
@@ -5,8 +5,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="css/stylewise.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1,
-      shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1>
 
     <title>{% block title %} {% endblock title %}</title>
 
